assets/css/app.css
/* ... */
.btn-outline-primary:hover {
    background: #29d4bd;
}

.btn-outline-primary-large {
	height: 64px;
    border-radius: 32px;
    font-size: 20px;
    letter-spacing: 1.5px;
    line-height: 48px;
}

.btn:focus {
    outline: none !important;
    box-shadow: none !important;
    background: #29d4bd !important;
}

.form-general-form {
    width: 100%;
    margin: 0 auto;
    padding: 1rem 0;
}

.form-control {
    border: solid 2px #95ebe0;
    letter-spacing: 1.5px;
    transition: none;
}

.form-control-message {
    height: 50vh;
}

.form-control:focus {
    border: solid 2.5px #29d4bd;
    box-shadow: none;
}

.form-control::-moz-placeholder {
  color: #a9bbc6;
  text-transform: uppercase;
}
.form-control:-ms-input-placeholder {
  color: #a9bbc6;
  text-transform: uppercase;
}
.form-control::-webkit-input-placeholder {
  color: #a9bbc6;
  text-transform: uppercase;
}

.form-button {
    text-align: center;
}

.form-button:hover {
    border: solid 2.5px #29d4bd;
}


/*----------Components - MQs*/
@media (min-width: 576px) {
    .form-general-form {
        width: 432px;
    }

    .form-control-message {
    height: 25vh;
    }    
}
/*<///------------------------General - Components>*/

/*<---------------------------General - Headings>*/
.h2-title-1 {
    color: #36454f;
    text-transform: uppercase;
    letter-spacing: 7px;
    text-align: center;
    font-size: 2.5em;
    font-weight: 500;
}

.h2-title-border {
    border-top: solid 2px #36454f;
    border-bottom: solid 2px #36454f;
    line-height: 60px;
}

.h3-title-1 {
    letter-spacing: 1.5px;
    text-transform: uppercase;
    font-size: 1.75em;
    font-weight: 300;
    padding: 0 0.5rem;
    color: #a9bbc6;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    text-align: center;
}

.h3-title-2 {
    letter-spacing: 1.5px;
    text-transform: uppercase;
    font-size: 1.75em;
    padding: 0 0.5rem;
    color: #36454f;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    text-align: center;
}

.h3-title-1-border {
    border-top: solid 0.5px #a9bbc6;
    border-bottom: solid 0.5px #a9bbc6;
    line-height: 40px;
}

.h3-title-2-border {
    border-top: solid 0.5px #36454f;
    border-bottom: solid 0.5px #36454f;
    line-height: 40px;
    font-weight: 300;
}

.h4-title-1 {
    letter-spacing: 1.5px;
    text-transform: uppercase;
    font-size: 1.25em;
    font-weight: 300;
    padding: 0 0.5rem;
    color: #a9bbc6;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    text-align: center;
}

.h4-title-1-border {
    border-top: solid 0.5px #a9bbc6;
    border-bottom: solid 0.5px #a9bbc6;
    line-height: 30px;
}

.h4-title-2 {
    letter-spacing: 1.5px;
    text-transform: uppercase;
    font-size: 1.25em;
    font-weight: 500;
    padding: 0 0.5rem;
    color: #36454f;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    text-align: center;
}

.h4-title-2-border {
    border-top: solid 0.5px #36454f;
    border-bottom: solid 0.5px #36454f;
    line-height: 30px;
}

/*----------Headings - MQs*/
@media (min-width: 768px) {
    .h3-title-sm-shrink {
        font-size: 1.35em;
        height: 100px;
    }
}

@media (min-width: 992px) {
    .h3-title-sm-shrink {
        height: 75px;
    }
}
/*<///------------------------General - Headings>*/

/*<---------------------------General - Navbar>*/
.navbar {
    padding: 5px 10px;
    text-transform: uppercase;
    background-color: #fff;
    font-size: 1.25rem;
    letter-spacing: 2px;
    border-bottom: rgba(169,187,198,0.25) 1px solid;
}

.navbar-light .navbar-toggler {
    border: none;
}

.navbar-light .navbar-toggler:focus {
    outline: none;
}

#navbar-custom-icon {
    font-size: 35px;
    color: #95ebe0;
}

.navbar-brand {
    padding: 0;
    margin: 0;
}

#logo {
    width: 65px;
}

.nav-item {
    padding: 0px 5px;
}

.navbar-light .navbar-nav .nav-link, .dropdown-item, #navbarDropdownMenuLink {
    color: #a9bbc6;
}

.navbar-light .navbar-nav .active>.nav-link {
    color: #29d4bd;
}

.dropdown-menu .active {
    color: #29d4bd;
    background-color: rgba(255,255,255,0.01);
}

.dropdown-menu .dropdown-item:hover {
    color: #29d4bd;
    background: rgba(255,255,255,0.01);
}

.dropdown-menu .dropdown-item:focus {
    color: #fff !important;
    background: #29d4bd !important;
}

.navbar-light .navbar-nav .nav-link:hover, #navbarDropdownMenuLink:hover {
    color: #29d4bd;
}

.dropdown-menu {
    min-width: 50px;
}

#social-links-nav {
    margin: 0;
}

#social-links-nav li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 13px;
    line-height: 7px;
    letter-spacing: 1px;
    text-align: center;
    color: #fff;
    background: #95ebe0;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

#social-links-nav li a i:hover {
    background: #29d4bd;
}

.list-inline-item:not(:last-child) {
    margin-right: 5px;
}
/*<///------------------------General - Navbar>*/

/*<---------------------------General - Hero Image>*/
.container-hero {
    height: 100vh;
    padding: 0;
    overflow: hidden;

    position: relative;
}

.hero-image {
    height: 100vh;
    width: 100%;

    animation-name: hero-zoom;
    animation-duration: 10s;
    animation-fill-mode: forwards;
}

@keyframes hero-zoom {
    from{
        transform: scale(1);
    }

    to{
        transform: scale(1.05);
    }
}

.hero-image-overlay {
    height: 100vh;
    width: 100%;

    background-color: rgba(50, 50, 50, 0.25);

    bottom: 0px;
    right: 0px;

    position: absolute;
}
/* ... */

